--- a/index.css
+++ b/index.css
@@ -8,6 +8,12 @@ main{
 /* text style */
 /* raleway font style */
 
+.raleway{
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+ 
+  font-style: normal;
+}
 
 .button{
   font-family: "Inter", sans-serif;
@@ -22,12 +28,17 @@ main{
     color: #4e47ff;
 }
 /* --------------------------------------------------------------------------------------------------------------------------- */
+
+
 /* nav bar design */
 .nav-bar{
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 158px;
+
+
+   
 }
 .logo{
     width: 99px;
@@ -44,4 +55,30 @@ main{
     border-radius: 5px;
 }
 
+.banner{
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 158px;
+    
+}
+.both{
+    text-align: center;
+}
+
+.banner h2{
+    font-weight: bold;
+    font-size: 65px;
+    color: #252432;
+    margin-bottom: 37px;
+    text-align: center;
+}
+.banner button{
+    width: 174px;
+    height: 48px;
+    font-size: 16px;
+    font-weight: bold;
+    /* text-align: center; */
+    border-radius: 5px;
+}
 
