--- a/index.css
+++ b/index.css
@@ -2,18 +2,20 @@
 main{
     max-width: 1140px;
     margin: 0 auto;
+
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+ 
+    font-style: normal;
 }
 /* all button style */
 
 /* text style */
 /* raleway font style */
 
-.raleway{
-  font-family: "Raleway", sans-serif;
-  font-optical-sizing: auto;
- 
-  font-style: normal;
-}
+/* .raleway{
+  
+} */
 
 .button{
   font-family: "Inter", sans-serif;
@@ -21,6 +23,7 @@ main{
   color: #FFFFFF;
   font-style: normal;
   background-color: #4e47ff;
+  border-radius: 5px;
 }
 
 /* perple color */
@@ -52,7 +55,7 @@ main{
 }
 .nav-bar button{
     padding: 12px 36px;
-    border-radius: 5px;
+    
 }
 
 .banner{
@@ -79,6 +82,33 @@ main{
     font-size: 16px;
     font-weight: bold;
     /* text-align: center; */
-    border-radius: 5px;
+    
 }
-
+/* action section design */
+.action{
+    margin-top: 158px;
+    margin-bottom: 158px;
+}
+.action-div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.column-1 h2{
+    font-size: 42px;
+    font-weight: bold;
+    color: #252432;
+}
+.column-1 p{
+    font-size: 24px;
+    color: #252432;
+}
+.column-1 button{
+    width: 229px;
+    height: 48px;
+}
+.column-2 img{
+    width: 403px;
+    height: 328px;
+    border-radius: 48px;
+}
