--- a/index.css
+++ b/index.css
@@ -146,8 +146,52 @@ main{
 
 
 /* Get intouch section */
+.parent-div{
+    height: 632px;
+}
 .child-div{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+.col-1{
+    width: 528px;
+    height: 232px;
+}
+.col-1 h2{
+    font-size: 97px;
+    font-weight: bold;
+}
+.col-2 form{
+    height: 490px;
+    width: 497px;
+    background-color: antiquewhite;
+}
+.col-2 label{
+    height: 22px;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+.col-2 input{
+    width: 100%;
+    height: 70px;
+    box-sizing: border-box;
+    margin-bottom: 19px;
+    border-radius: 6px;
+    margin-top: 10px;
+}
+.col-2 textarea{
+    width: 100%;
+    height: 135px;
+    box-sizing: border-box;
+    margin-bottom: 19px;
+    padding-top: 20px;
+    border-radius: 6px;
+    margin-top: 10px;
+}
+.col-2 button{
+    height: 62px;
+    width: 100%;
+    border-radius: 6px;
+}
+/*  */
