--- a/index.css
+++ b/index.css
@@ -194,4 +194,51 @@ main{
     width: 100%;
     border-radius: 6px;
 }
-/*  */
+/* Footer section*/
+.footer-div{
+    /* display: flex; */
+    /* justify-content: center; */
+    align-items: center;
+    text-align: center;
+    height: 428px;
+    /* background-color: bisque; */
+}
+.sub-div{
+    text-align: center;
+    height: 221px;
+    /* width: 531px; */
+    /* margin: 104px 455px 103px 454px; */
+    padding-top: 50px;
+    
+}
+.sub-div h1{
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+  
+    font-style: normal; 
+    font-size: 100px;
+    color: #4e47ff;
+    /* font-weight: bold; */
+}
+.logo-div{
+    height: 121px;
+    margin-bottom: 0px;
+}
+.footer-text{
+    margin-top: 20px;
+    color: #8987A1
+}
+.footer-text ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+}
+.footer-text li{
+    list-style: none;
+    margin-right: 48px;   
+}
+
+.footer-text li a{
+    text-decoration: none;
+    color: #8987A1;
+}
