--- a/index.css
+++ b/index.css
@@ -164,8 +164,51 @@ main{
 /* users review section */
 .review{
     margin-bottom: 158px;
+    height: 342px;
 }
-
+.title-1{
+    font-size: 42px;
+    font-weight: bold;
+    margin-bottom: 50px;
+}
+.title-1 h2{
+    text-align: center;
+}
+.users-view{
+    display: flex;
+    justify-content: space-evenly;
+}
+.icons{
+    display: flex;
+}
+.box-1{
+    background-color: #FFFFFF;
+    margin-right: 20px;
+    border-radius: 10px;
+    padding: 24px 24px;
+}
+/* }
+.box-1 img{
+    border-radius: 50%;
+} */
+.reviewer{
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+.reviewer img{
+    border-radius: 50%;
+    height: 40px;
+}
+.rev-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 14px;
+}
+.rev-info p{
+    margin: 0 0 2px 0;
+}
 
 /* Get intouch section */
 .parent-div{
