--- a/index.css
+++ b/index.css
@@ -144,7 +144,7 @@ main{
 }
 /* Productive users section design */
 .productive{
-    background-color:#d6d5f4;
+    background-color:#dfdef2;
     text-align: center;
     padding: 50px 142px;
     margin-bottom: 158px;
@@ -159,6 +159,9 @@ main{
 .options{
     display: flex;
     justify-content: space-evenly;
+}
+.opt-box{
+    margin-right: 158px;
 }
 .title{
     font-family: "Inter", sans-serif;
@@ -195,10 +198,7 @@ main{
     border-radius: 10px;
     padding: 24px 24px;
 }
-/* }
-.box-1 img{
-    border-radius: 50%;
-} */
+
 .reviewer{
     display: flex;
     align-items: center;
